# Model_training

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_clean.bat  build_improved.bat  check_requirements.bat  check_requirements.cpp  check_requirements.sh  sample_data.csv
include/: chartwidget.h  datasetmanager.h  mainwindow.h  modeltrainer.h  progressdialog.h
resources/: resources.qrc
src/: chartwidget.cpp  datasetmanager.cpp  main.cpp  mainwindow.cpp  modeltrainer.cpp  progressdialog.cpp
